all pages done with initial layout

--- a/app/views/web/ost/terms.html.erb
+++ b/app/views/web/ost/terms.html.erb
@@ -1,1 +1,102 @@
-terms page
+<%= render :partial => "/shared/web/common/navbar" %>
+
+<div class="container container-text-page container-terms">
+
+  <div class="row">
+    <div class="content">
+      <h2 class="mt-4 mb-2">Website Terms of Use</h2>
+
+      <h5 class="mt-4 pt-2">Introduction</h5>
+      <p>
+        This website (“<b>our website</b>”) is owned and operated by OST.com Limited a company incorporated with limited liability in Hong Kong. Each reference in these terms of use to “our website” includes all materials that we make available to you on our website.
+      </p>
+      <p>
+        By using our website, you agree to comply with these terms of use. Please check this page each time you use our website, as we may update these terms from time to time.
+      </p>
+      <p>
+        If you carry out any transaction through our website, that transaction may be subject to additional terms and conditions which you will be asked to read and accept at the relevant time. To the extent of any inconsistency with these terms, the terms of the transaction apply to that transaction and any matters connected with it.
+      </p>
+
+      <h5 class="mt-4 pt-2">Your obligations</h5>
+      <p>
+        You must comply with any instructions we give you about how to use our website and must not do anything that interferes with or adversely affects the normal operation of the website (including the ability of other users to access or use the website).
+      </p>
+      <p>
+        You are responsible for ensuring the security of the systems and devices that you use to access our website, including through use of appropriate virus-checking and other security software.
+      </p>
+
+      <h5 class="mt-4 pt-2">Registration</h5>
+      <p>
+        You may need to register with us in order to access certain parts of our website. In this case, we may require you to create a password, or other appropriate log-in details for your account. You are responsible for keeping your log-in details confidential so that they cannot be used without your permission. You will be responsible for any use of our website by anyone using your log-in details.
+      </p>
+
+      <h5 class="mt-4 pt-2">Rights to suspend or terminate access</h5>
+      <p>
+        We may suspend, terminate or block your access to all or any part of our website at any time and without prior notice to you.
+      </p>
+
+      <h5 class="mt-4 pt-2">Intellectual property</h5>
+      <p>
+        All of the intellectual property rights in and to our website belong to us and our licensors. We may update and change the materials available on our website, including by removing materials, at any time in our discretion without notice to you.
+      </p>
+      <p>
+        You may download or print sections of our website if needed for your own personal use, but otherwise you may not reproduce any part of our website without our express prior consent. To the extent that our website contains functionality that allows you to access or download specific materials through our website, your use of that functionality and the downloaded materials may be subject to separate terms and conditions which you will be asked to read and accept at the relevant time.
+      </p>
+
+      <h5 class="mt-4 pt-2">Website links</h5>
+      <p>
+        Our website may contain or link to information that has not been devised, verified or tested by us or any of our officers, employees or agents. These are provided for your information only. We do not take any responsibility for that information, nor endorse its accuracy or completeness.
+      </p>
+      <p>
+        We do not guarantee that the information, or the provision of the hyperlinks to you, does not infringe third party rights. If our website contains a link to an external website, we do not endorse, recommend, approve, guarantee or introduce any third parties or the services and/or products that those third parties may offer. We accept no responsibility for them or any of the content available, or for any loss or damage that may arise from your use of them.
+      </p>
+      <p>
+        You may provide a link to the home page of our website at, on any website you operate, as long as you do not suggest any form of association, approval or endorsement on our part without our express prior permission and you promptly delete the link at our request.
+      </p>
+      <p>
+        Except as set out in this clause, you may not link to our website.
+      </p>
+
+      <h5 class="mt-4 pt-2">No financial services activities or advice</h5>
+      <p>
+        The information and any materials contained in this website should not be considered as an offer or solicitation to buy or sell financial instruments, provide financial advice, create a trading platform, facilitate or take deposits or provide any other financial services of any kind in any jurisdiction.
+      </p>
+      <p>
+        The information contained on this website is not intended to provide and should not be construed as advice of any kind. You should obtain appropriate professional advice when necessary. It does not take into account your objectives, financial situation or needs.
+      </p>
+
+      <h5 class="mt-4 pt-2">Liability</h5>
+      <p>
+        While we will use reasonable care and skill in operating our website, we cannot promise that our website will always be available, meet your requirements or completely free of faults, errors or compromise from cybersecurity events.
+      </p>
+      <p>
+        To the maximum extent permitted by law, except as expressly set out in these terms of use, we exclude:
+      </p>
+      <ul>
+        <li>all conditions, representations, warranties and statutory guarantees, whether express or implied, in relation to our website; and</li>
+        <li>any liability, whether in contract, tort (including negligence), or otherwise, for any indirect or consequential loss, damage or expense incurred by you or any other user in connection with our website.</li>
+      </ul>
+      <p>
+        To the extent we are unable by law to exclude any implied condition, representation, warranty or statutory guarantee in relation to the provision of goods or services through our website, we limit our liability for a breach to the re-supply of those goods or services, or payment for such re-supply. This is without limitation to any other exclusions or restrictions of our or others’ liability in connection with this website.
+      </p>
+
+      <h5 class="mt-4 pt-2">Privacy</h5>
+      <p>
+        We will manage any personal information that we collect through our website in accordance with our <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy">Privacy Policy, which you can access here</a>.
+      </p>
+
+      <h5 class="mt-4 pt-2">Governing law</h5>
+      <p>
+        These terms of use are governed by the laws in force in the Hong Kong Special Administrative Region of the People’s Republic of China and are subject to the exclusive jurisdiction of the courts in that place.
+      </p>
+
+      <h5 class="mt-4 pt-2">Questions?</h5>
+      <p class="mb-5">
+        Please contact us support@ost.com if you have any questions about our website
+      </p>
+    </div>
+  </div>
+
+</div>
+
+<%= render :partial => "/shared/web/common/index_svg_sprite" %>
