--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => "/shared/web/common/navbar" %>
 <div class="container-partners container-press">
   <%= render :partial => "/web/ost/partners/jumbotron" %>
   <%= render :partial => "/web/ost/partners/partners_updates", locals: {title: ''}  %>
