ost partners page

--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="contactus">
   <div class="row container-contact-us">
-    <div class="col-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+    <div class="col-12 col-md-6 mx-auto">
       <div class="row">
         <div class="col-12">
           <h2 class="text-center">Contact Us</h2>
@@ -38,7 +38,7 @@
             <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%#= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-for="recaptcha" style="text-align: center"></div>
           </div>
-          <button type="submit" class="btn btn-square-gold btn-gold" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">SUBMIT</button>
+          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">SUBMIT</button>
           <div class="error" data-for="general_error"></div>
         </form>
         <div id="send-message-success" style="display: none">
