--- a/app/views/web/ost/partners/_jumbotron.erb
+++ b/app/views/web/ost/partners/_jumbotron.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row container-jumbotron">
     <div class="col-12">
-      <h1 class="heading">Partner Companies</h1>
+      <h2>Partner Companies</h2>
       <p class="desc">
         We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap, and helping shape the OST platform to ensure that it meets their unique business needs.
       </p>
-      <a href="#contactus" class="btn-common btn-gold get-started smooth-scroll" title="Contact Us">Contact Us</a>
-      <a href="#member-companies" class="btn-common btn-grey get-started smooth-scroll" title="Meet Partners">Meet Partners</a>
+      <a href="#contactus" class="btn btn-primary smooth-scroll" title="Contact Us">Contact Us</a>
+      <a href="#member-companies" class="btn btn-secondary smooth-scroll" title="Meet Partners">Meet Partners</a>
     </div>
   </div>
 </div>
