simple token namespace to ost namespace

--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md navbar-simpletoken">
+<nav class="navbar navbar-expand-md navbar-ost">
   <div class="container">
     <a class="navbar-brand ost-brand" href="<%= GlobalConstant::Base.root_url %>" title="OST">
       <svg class="ost-nav-logo">
