--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -5,7 +5,7 @@
         <div class="col-12">
           <div class="container-subscribe">
             <h1>Get the Latest Updates from OST</h1>
-            <form class="simpletoken-form" id="subscribe-form">
+            <form class="ost-form" id="subscribe-form">
               <div class="subscribe">
                 <div class="form-group mb-0">
                   <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com">
