--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -12,7 +12,7 @@
 //
 
 // stylelint-disable
-$white:    #fff !default;
+$white:    #ffffff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -22,7 +22,13 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
+$black:    #000000 !default;
+$mint-cream: #F1F8F5 !default;
+$azure: #F8FAFA !default;
+$shakespeare: #6C9BA9 !default;
+$powder-blue: #BEDCDF !default;
+$neptune: #6CA3A9 !default;
+$skeptic: #91C0AD !default;
 $side-bar-nav-width : 250px;
 
 $grays: () !default;
