--- a/app/views/web/ost/partners/_member_companies.erb
+++ b/app/views/web/ost/partners/_member_companies.erb
@@ -1,4 +1,4 @@
-<div class="container-member-companies" id="member-companies">
+<div class="container-member-companies pt-5 pb-4" id="member-companies">
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-8 mx-auto">
