partners page carousel data from s3

--- a/app/views/web/ost/partners/_partners_updates.erb
+++ b/app/views/web/ost/partners/_partners_updates.erb
@@ -24,8 +24,8 @@
       <div class="thumbnail">
         <a href="__link__" target="_blank">
           <img src="__image__" alt="__title__" style="width: 100%;">
-          <div class="caption">
-            <h4>__title__</h4>
+          <div class="caption px-2 py-3">
+            <h4 class="m-0">__title__</h4>
           </div>
         </a>
       </div>
