ux ui review done

--- a/app/assets/stylesheets/web/common/_common.scss
+++ b/app/assets/stylesheets/web/common/_common.scss
@@ -5,4 +5,19 @@
 body {
   font-weight: $font-weight-light;
   color: $blue-800;
+
+  a {
+    color: $blue-800;
+    text-decoration: none;
+
+    &:hover , &:active , &:focus {
+      color: $yellow-500;
+      text-decoration: none;
+    }
+  }
+
+  .horizontal-line {
+    margin-top: 15px;
+    border-bottom: 1px solid $skeptic;
+  }
 }
