--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -2,27 +2,27 @@
 
 <div class="container container-text-page container-documents">
   <div class="row">
-    <div class="content">
-      <h2 class="mt-4 mb-2">Documents</h2>
+    <div class="content col-12">
+      <h2 class="mt-4 mb-4">Documents</h2>
+      <h4 class="sub-title">FAQ</h4>
 
       <h5 class="mt-4 pt-2">
-        <span class="sub-title">FAQ</span>
         <a href="/faq" target="_blank">Simple Token FAQ&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>Project, Benefits, Token Sale, Technology/Product, Team, Privacy & Security FAQ</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
 
       <h5 class="mt-4 pt-2">
         <span class="sub-title">Main Papers</span>
         <a href="https://drive.google.com/open?id=0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ" target="_blank">OpenST Protocol White Paper v0.8.3&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>The OpenST protocol establishes a bridge between the two blockchains, Ethereum mainnet and the Simple Token sidechain. Using a staking contract on Ethereum mainnet, and a corresponding minting contract on the sidechain, the protocol can atomically transfer tokens between the two chains, and thereby mint branded tokens on the sidechain by staking ST on the Ethereum mainnet.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://drive.google.com/file/d/1yTJdlagiEWXhrVJ3AOi8-nwur0nCBA5r/view" target="_blank">OpenST Protocol White Paper v0.8.3 (Korean)&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>The OpenST protocol establishes a bridge between the two blockchains, Ethereum mainnet and the Simple Token sidechain. Using a staking contract on Ethereum mainnet, and a corresponding minting contract on the sidechain, the protocol can atomically transfer tokens between the two chains, and thereby mint branded tokens on the sidechain by staking ST on the Ethereum mainnet.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://www.slideshare.net/slideshow/embed_code/key/NkxMuva4mlnpxh" target="_blank">Simple Token Project & Vision Deck&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
         &nbsp;|&nbsp;<a href="https://drive.google.com/open?id=0B4f0lcszU8fnRmZKNWhUc1FoaUU" target="_blank">PDF&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
@@ -30,12 +30,12 @@
       <p>
         An overview of the Simple Token Project and a vision for ongoing development of OpenST and Simple Token software, applications, and services by 3rd party developers.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://d36lai1ppm9dxu.cloudfront.net/assets/docs/simple-token-infographic.pdf" target="_blank">Roadmap&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>Roadmap and timeline for the Simple Token project.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
 
       <h5 class="mt-4 pt-2">
         <span class="sub-title">Side Papers</span>
@@ -44,69 +44,69 @@
       <p>
         Simple Token is an ERC20 token (ST) and a protocol developed by OpenST to support token economies in mainstream consumer internet companies. This document provides an overview of the OpenST protocol and platform utility as well as the near term implementation roadmap.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/13QibvDM5PjOdyVg0HzxZ-uhqb0q5a193XTcKGBwFD-A/edit" target="_blank">Governance: OpenST & The Simple Token Company&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>
         The Simple Token Project is a project of OpenST Ltd and The Simple Token Company Limited. OpenST Ltd and The Simple Token Company Limited are independent separate organizations with their own independent missions and governance.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1mg8PRWAD47D_VwyRBR4GN0f8y6ldyoLSzbi8DWb2Kew/edit#" target="_blank">Uses & Lifecycle of Demand for Simple Token&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>
         This memo describes intended and conceptualized uses of Simple Token and the envisioned lifecycle of Simple Token demand.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1V6MZjojOYwVL8xoPQ09Pgzs93FUzBHLapcjcWOMHu18/edit?usp=sharing" target="_blank">Stabilizing Branded Tokens&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>
         This memo describes a proposed mechanism for stabilizing the price of Branded Tokens in the OpenST ecosystem.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1TXmGsBnOxWUmzfXG2p2F94cs2sLU3-GNFmRhvtvboDE/edit?usp=sharing" target="_blank">The Simple Token Network Accelerator Program&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>
         This memo introduces the Simple Token Network Accelerator program which provides grants to promising projects and developers.
       </p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
 
       <h5 class="mt-4 pt-2">
         <span class="sub-title">GitHub Repositories</span>
         <a href="https://github.com/OpenSTFoundation/openst-platform" target="_blank">Openst-Platform&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>OpenST Platform provides a web3 interface to tokenise mainstream consumer applications with crypto-assets on Ethereum</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://github.com/OpenSTFoundation/openst-protocol" target="_blank">Openst-Protocol&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>OpenST Protocol allows to stake Simple Token on Ethereum to mint branded utility tokens</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://github.com/OpenSTFoundation/SimpleTokenSale" target="_blank">SimpleTokenSale&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>Simple Token Sale Contracts</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
 
       <h5 class="mt-4 pt-2">
         <span class="sub-title">Token Sale</span>
         <a href="https://docs.google.com/document/d/19eUCyVHSWBGB79djGnTS6h-OV1EtTkNl8v4ECPQ8xNk/" target="_blank">After Sale Purchasers Guide&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>This mini guide presents some useful tips and reminders for managing your ST.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://drive.google.com/file/d/0B1E_xJPbELBKblpNak8xQS1WelU/view?usp=sharing" target="_blank">ST Token Sale Data Sheet&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>All the key data about the token sale, token allocation, use of proceeds, and key dates.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://drive.google.com/file/d/0B1E_xJPbELBKeU9pUk5uSnNqWFU/view" target="_blank">ST Token Sale Terms & Conditions&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>You must read the entirety of this document carefully before making any decision to purchase Tokens.</p>
-      <hr class="mt-2" style="border-bottom: 1px solid #91c0ad;"/>
+      <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1jl7DUFp3uGl9OABoSfASNkes-QcLuvo_U3El_Im4S1M/edit" target="_blank">ST Token Sale #2 Details & Loyalty Discounts&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
