--- a/app/views/web/ost/terms.html.erb
+++ b/app/views/web/ost/terms.html.erb
@@ -3,7 +3,7 @@
 <div class="container container-text-page container-terms">
 
   <div class="row">
-    <div class="content">
+    <div class="content col-12">
       <h2 class="mt-4 mb-2">Website Terms of Use</h2>
 
       <h5 class="mt-4 pt-2">Introduction</h5>
