--- a/app/assets/stylesheets/web/ost/team/About.scss
+++ b/app/assets/stylesheets/web/ost/team/About.scss
@@ -6,7 +6,7 @@
 .abouthead{
 
   .abouthead-content {
-    letter-spacing: 1.7px;
+    letter-spacing: 1.2px;
     margin: 15px 0 30px;
   }
 }
@@ -41,12 +41,8 @@
         }
 
         a{
-          color: $blue-900;
           font-weight: $headings-font-weight;
-          &:hover, &:focus{
-            text-decoration: none;
-            color: $yellow-500;
-          }
+          font-size: 0.875rem;
         }
       }
 
