--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -297,7 +297,7 @@
                   <div class="caption">
                     <h5 itemprop="name"><%=member[:name] %></h3>
                     <h6 itemprop="jobTitle"><%=member[:title] %></h4>
-                    <p class="text-1"><%=member[:description] %></p>
+                    <p class="mb-2"><%=member[:description] %></p>
                     <p>
                       <% if member[:linkedIn].present? %>
                         <a class="profile-links" target="_blank" href="<%= member[:linkedIn] %>">LinkedIn</a>
