ui changes done

--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container container-text-page container-documents">
   <div class="row">
-    <div class="content col-12">
+    <div class="col-12 mb-5">
       <h2 class="mt-4 mb-4">Documents</h2>
       <h4 class="sub-title">FAQ</h4>
 
@@ -110,10 +110,11 @@
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1jl7DUFp3uGl9OABoSfASNkes-QcLuvo_U3El_Im4S1M/edit" target="_blank">ST Token Sale #2 Details & Loyalty Discounts&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
-      <p class="mb-5">As a thank you & loyalty program for participants in our first token sale,
+      <p >As a thank you & loyalty program for participants in our first token sale,
         anyone who participates in the first ST token sale will automatically get a 20% discount towards their participation in the 2nd token sale,
         should it occur.
       </p>
+      <div class="horizontal-line"></div>
     </div>
   </div>
 
