--- a/app/views/web/ost/news.html.erb
+++ b/app/views/web/ost/news.html.erb
@@ -530,7 +530,7 @@
 
 <div class="container container-text-page container-documents">
   <div class="row">
-    <div class="content col-12">
+    <div class="col-12 mb-5">
       <h2 class="mt-4 mb-4">News</h2>
       <% press_release.each_with_index do | data, index | %>
         <% if data[:header].present? %>
