--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container container-text-page container-documents">
   <div class="row">
-    <div class="content col-12">
+    <div class="col-12 mb-5">
       <h2 class="mt-4 mb-4">Careers</h2>
 
       <!-- Berlin Location Starts-->
