--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -120,6 +120,7 @@
                    image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Akshay-Raje.png",
                    twitter: 'https://twitter.com/akshayraje/',
                    medium: 'https://medium.com/@akshayraje/',
+                   linkedIn: 'https://www.linkedin.com/in/akshayraje/',
                    description: "Akshay is a lead front-end engineer and the in-house JavaScript expert. He has the expertise in cutting edge front-end technologies, PHP, WordPress and Google Apps. He's a enthusiastic about trading crypto-currencies and often writes about these topics on Medium and Quora."
                  },
                  {
