--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -3,17 +3,17 @@
 <div class="container container-text-page container-documents">
   <div class="row">
     <div class="col-12 mb-5">
-      <h2 class="mt-4 mb-4">Documents</h2>
-      <h4 class="sub-title">FAQ</h4>
+      <h2 class="mt-4 ">Documents</h2>
+      <h4 class="mt-4">FAQ</h4>
 
       <h5 class="mt-4 pt-2">
-        <a href="/faq" target="_blank">Simple Token FAQ&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
+        <a href="https://simpletoken.org/faq/" target="_blank">Simple Token FAQ&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>Project, Benefits, Token Sale, Technology/Product, Team, Privacy & Security FAQ</p>
       <div class="horizontal-line"></div>
 
+      <h4 class="mt-4"> Main Papers </h4>
       <h5 class="mt-4 pt-2">
-        <span class="sub-title">Main Papers</span>
         <a href="https://drive.google.com/open?id=0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ" target="_blank">OpenST Protocol White Paper v0.8.3&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>The OpenST protocol establishes a bridge between the two blockchains, Ethereum mainnet and the Simple Token sidechain. Using a staking contract on Ethereum mainnet, and a corresponding minting contract on the sidechain, the protocol can atomically transfer tokens between the two chains, and thereby mint branded tokens on the sidechain by staking ST on the Ethereum mainnet.</p>
@@ -37,8 +37,8 @@
       <p>Roadmap and timeline for the Simple Token project.</p>
       <div class="horizontal-line"></div>
 
+      <h4 class="mt-4">Side Papers</h4>
       <h5 class="mt-4 pt-2">
-        <span class="sub-title">Side Papers</span>
         <a href="https://docs.google.com/document/d/1ccNDCJmEqLAw1tzdRZz1mEnJGF7tCNpVT8i88QeO5CM/edit?usp=sharing" target="_blank">The OpenST Protocol & Platform Utility&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>
@@ -74,8 +74,8 @@
       </p>
       <div class="horizontal-line"></div>
 
+      <h4 class="mt-4">GitHub Repositories</h4>
       <h5 class="mt-4 pt-2">
-        <span class="sub-title">GitHub Repositories</span>
         <a href="https://github.com/OpenSTFoundation/openst-platform" target="_blank">Openst-Platform&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>OpenST Platform provides a web3 interface to tokenise mainstream consumer applications with crypto-assets on Ethereum</p>
@@ -91,8 +91,8 @@
       <p>Simple Token Sale Contracts</p>
       <div class="horizontal-line"></div>
 
+      <h4 class="mt-4">Token Sale</h4>
       <h5 class="mt-4 pt-2">
-        <span class="sub-title">Token Sale</span>
         <a href="https://docs.google.com/document/d/19eUCyVHSWBGB79djGnTS6h-OV1EtTkNl8v4ECPQ8xNk/" target="_blank">After Sale Purchasers Guide&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
       </h5>
       <p>This mini guide presents some useful tips and reminders for managing your ST.</p>
