--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -3,7 +3,7 @@
 <div class="container container-text-page container-documents">
   <div class="row">
     <div class="col-12 mb-5">
-      <h2 class="mt-4 mb-4">Careers</h2>
+      <h2 class="mt-4">Careers</h2>
 
       <!-- Berlin Location Starts-->
       <%
@@ -153,7 +153,7 @@
 
       <% jobs.each_with_index do|member, index| %>
         <% if member[:location].present? %>
-          <h4><%=member[:location] %></h4>
+          <h4 class="mt-4"><%=member[:location] %></h4>
         <% end %>
         <h5 class="mt-4 pt-2">
           <a href="<%=member[:profile_link] %>" target="_blank" title="<%=member[:profile] %>"><%=member[:profile] %>&nbsp;<span class="download-icon-small" style="vertical-align: bottom"></span></a>
