--- a/app/views/web/ost/partners/_partners_updates.erb
+++ b/app/views/web/ost/partners/_partners_updates.erb
@@ -1,4 +1,4 @@
-<div class="container pt-5 pb-4">
+<div class="container py-5">
   <div class="row">
     <div class="col-12">
       <div class="partners-updates-carousel with-placeholder">
