--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -148,6 +148,11 @@
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1mjjG1SkPpFYh1TGk.xHtEU-&embedsource=Embed",
                 description: "OST “Simple Token” is looking for a business development team lead with a strong analytical consultative approach and passion for blockchain technology and crypto-currencies to join our growing team. This is an exciting opportunity to drive market development, sales and partnerships within a dynamic team for one of the fastest growing Blockchain companies.",
             },
+            {
+                profile: "Blockchain Strategy Consultant",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1rQ@UH.6Bp4ZeJcd1AZ7QlA-&embedsource=Embed",
+                description: "We are seeking Blockchain Strategy Consultants to work with our partners to integrate OST Blockchain technology solutions into their businesses. You will be on the front-lines with our partners as their primary consultant and advisor, developing plans and strategies with them to tokenize their businesses. Analysis and research tasks will involve assessing blockchain technologies, business models, and markets. The advisory component will involve working with companies looking to integrate public blockchain technology and tokenize an aspect of their business model.",
+            },
         ]
       %>
 
